updated commands post

--- a/_posts/2016-01-21-commands.md
+++ b/_posts/2016-01-21-commands.md
@@ -37,10 +37,10 @@ _-r : recursive_
 ##Git
 
 git commit
-: makes save point in git history
+: makes save point in git history `git commit -m "<message>"`
 
 git add
-: stages files to be commited
+: stages files to be commited `git add .`
 
 git status
 : shows updated files and staged/unstaged files
